--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.9",
     "firebase": "^10.14.1",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
